--- a/templates/index.html
+++ b/templates/index.html
@@ -679,6 +679,9 @@
     <span class="footer-author">Produced by Wen-Yu Su · Fb: 蘇玟予</span>
   </footer>
 
+  <!-- 🌸 櫻花動畫系統 (必須在 script.js 之前載入) -->
+  <script src="{{ url_for('static', filename='sakura.js') }}"></script>
+  
   <!-- 主邏輯 -->
   <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
